syntax = "proto3";

import "google/protobuf/empty.proto";

package todo;

service TodoService {
  rpc GetTodo (GetTodoRequest) returns (Todo);
  rpc GetTodos (GetTodosRequest) returns (stream Todo);
  rpc CreateTodo (CreateTodoRequest) returns (Todo);
  rpc UpdateTodo (UpdateTodoRequest) returns (Todo);
  rpc DeleteTodo (DeleteTodoRequest) returns (google.protobuf.Empty);
}

message Todo {
  string id = 1;
  string text = 2;
  bool completed = 3;
}

message GetTodoRequest {
  string id = 1;
}

message GetTodosRequest {}

message CreateTodoRequest {
  string text = 1;
  bool completed = 2;
}

message UpdateTodoRequest {
  string id = 1;
  string text = 2;
  bool completed = 3;
}

message DeleteTodoRequest {
  string id = 1;
}